[tool.poetry]
name = "datahandling"
version = "1.0.0"
description = "Library for handling imports of data from spreadsheet-like files."
authors = ["Philipp C. Verpoort <pcv@sortitionfoundation.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
