[project]
name = "datahandling"
version = "1.0.0"
description = "Library for handling imports of data from spreadsheet-like files."
authors = [
    { name = "Philipp C. Verpoort", email = "pcv@sortitionfoundation.org" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
]
